[project]
name = "mergemind"
version = "0.1.0"
description = "Agentic PR review system that evaluates pull requests in the context of product backlog items."
readme = "README.md"
authors = [
    { name = "Burak Demirel", email = "burak.demirel@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.12",
    "pydantic-ai",
    "pydantic-settings",
    "httpx",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "pgvector",
    "tenacity",
    "rich",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
mergemind = "mergemind.cli:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
